# rag-lab

./: .env  .gitignore  LICENSE  app.py  howitworks.txt  install.sh  pyproject.toml  readme.md  requirements.txt  simple_app.py  simple_rag.py
fe-react/: package-lock.json  package.json
fe-react/src/: App.css  App.tsx
resources/: assistants.json  banner.txt
src/: banner.py  loader.py  qa_engine.py
